# RebuiltSimon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: build.yml
Injector/: CMakeLists.txt  main.c
RebuiltSimon/: CMakeLists.txt  cvars.c  cvars.h  globals.c  globals.h  main.c  pch.h  rebuilt_simon.c  rebuilt_simon.h
RebuiltSimon/Allocators/: arena.c  arena.h  arena_config.h  arena_constant.c  arena_pointer_list.c  arena_reserve_commit.c  platform_reserve_commit.h  win32_reserve_commit.c
RebuiltSimon/Features/: info.c  info.h
RebuiltSimon/Features/Cheats/: disable_stamina.c  disable_stamina.h
RebuiltSimon/Features/Movement/: autohop.c  autohop.h  autojump.c  autojump.h  ducktap.c  ducktap.h  yaw.c  yaw.h
RebuiltSimon/Features/QOL/: rawinput.c  rawinput.h
RebuiltSimon/Features/Visual/: hud.c  hud.h  info.c  info.h
RebuiltSimon/Hooks/: hooks.c  hooks.h
RebuiltSimon/Hooks/Client/: CL_CreateMove.c  HUD_Frame.c  HUD_Redraw.c  HUD_Reset.c  HUD_Shutdown.c  HUD_VidInit.c  Host_ValidSave.c  hook_list.h
RebuiltSimon/Hooks/Server/: PM_PreventMegaBunnyJumping.c  PM_Unduck.c  hook_list.h
RebuiltSimon/ResParser/: CMakeLists.txt  libresparser.c  libresparser.h
RebuiltSimon/SDK/: structures.h
RebuiltSimon/SDK/Clock/: clock.c  clock.h
RebuiltSimon/SDK/GoldSrc/: convars.c  convars.h  input.c  input.h
RebuiltSimon/SDK/GoldSrc/Wrappers/: IGame.cpp  IGame.h
RebuiltSimon/SDK/Helpers/Entities/: player.c  player.h
RebuiltSimon/SDK/Helpers/Math/: vector_math.h
RebuiltSimon/SDK/Helpers/Parsers/: engine_font.c  engine_font.h  parsers.c  parsers.h  res_parser.c  res_parser.h
RebuiltSimon/SDK/Helpers/SpriteUtils/: sprite_utils.c  sprite_utils.h
RebuiltSimon/SDK/Logger/: clog.h  logger.c  logger.h
cmake/: toolchain-mingw32.cmake  toolchain-msvc-win32.cmake
memory/: memory.c  memory.h
